# python-sveltekit-sse

./: CLAUDE.md  README.md
go/: .gitignore  go.mod  main.go
python/: main.py  pyproject.toml
sveltekit/: package-lock.json  package.json
sveltekit/src/routes/: +page.svelte
sveltekit/src/routes/api/poll/: +server.ts
sveltekit/src/routes/poll/: +page.svelte
